Se ahce la prijera release

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -80,10 +80,10 @@
         <p>Los Desarrolladores implementan medidas de seguridad razonables para proteger la información bajo nuestro control. Sin embargo, es importante recordar que ninguna transmisión de datos por Internet o método de almacenamiento electrónico es 100% seguro. La seguridad de sus datos depende en gran medida de la seguridad de su dispositivo y de cómo usted gestiona su clave de API.</p>
 
         <h2>4. Responsabilidad del Usuario</h2>
-        <p>Usted es el único responsable del contenido de las imágenes que procesa a través de la Aplicación y del uso que haga de las descripciones generadas. Los Desarrolladores de RayoAI <strong>no se hacen responsables del uso indebido, ilegal o no ético</strong> que los usuarios puedan dar a la Aplicación o a la información obtenida a través de ella. Se espera que los usuarios actúen de manera responsable y cumplan con todas las leyes y regulaciones aplicables.</p>
+        <p>Usted es el único responsable del contenido de las imágenes que procesa a través de la Aplicación y del uso que haga de las descripciones generadas. Los Desarrolladores de RayoAI y Google LLC no se hacen responsables del uso indebido, ilegal o no ético que los usuarios puedan dar a la Aplicación o a la información obtenida a través de ella. Se espera que los usuarios actúen de manera responsable y cumplan con todas las leyes y regulaciones aplicables en EE. UU., así como en el país donde se encuentre el usuario y cualquier otro reglamento o regulación pertinente.</p>
 
         <h2>5. Cambios en esta Política de Privacidad</h2>
-        <p>Podemos actualizar nuestra Política de Privacidad ocasionalmente. Le notificaremos cualquier cambio publicando la nueva Política de Privacidad en esta página. Se le aconseja revisar esta Política de Privacidad periódicamente para cualquier cambio. Los cambios a esta Política de Privacidad son efectivos cuando se publican en esta página.</p>
+        <p>Podemos actualizar nuestra Política de Privacidad ocasionalmente. Los desarrolladores de RayoAI nos reservamos el derecho de notificar o no los cambios realizados a la política de privacidad, por lo cual se le aconseja revisar esta Política de Privacidad periódicamente para cualquier cambio. Los cambios a esta Política de Privacidad son efectivos cuando se publican en esta página.</p>
 
         <h2>6. Contacto</h2>
         <p>Si tiene alguna pregunta sobre esta Política de Privacidad, puede contactarnos:</p>
